--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.7.2",
         "admin-lte": "^3.0.0-alpha.2",
-        "ajv": "^6.10.0"
+        "ajv": "^6.10.0",
+        "vue-router": "^3.0.2"
     }
 }
