--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.17",
+        "axios": "^0.17.1",
         "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
+        "popper.js": "^1.12",
         "vue": "^2.5.7"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.7.2",
         "admin-lte": "^3.0.0-alpha.2",
         "ajv": "^6.10.0",
+        "moment": "^2.24.0",
+        "sweetalert2": "^8.6.0",
+        "vform": "^1.0.0",
+        "vue-progressbar": "^0.7.5",
         "vue-router": "^3.0.2"
     }
 }
